# OpenGL_Exercises

./: LICENSE.md  README.md
Create_Window/GLFW_GLAD/: CMakeLists.txt
Create_Window/GLFW_GLAD/doc/: Usage.md
Create_Window/GLFW_GLAD/src/: main.cpp
Create_Window/GLFW_GLAD/src/helpers/: RootDir.h
Create_Window/SDL_GLEW/: CMakeLists.txt
Create_Window/SDL_GLEW/doc/: Usage.md
Create_Window/SDL_GLEW/src/: main.cpp
